--- a/styles/style.css
+++ b/styles/style.css
@@ -14,41 +14,95 @@ h1 {
   font-size: 37px;
 }
 
+h2 {
+  color: black;
+
+  display: table-cell;
+
+  text-align: center;
+  vertical-align: middle;
+}
+
+p {
+  color: #1f2937;
+  font-size: 45px;
+}
+
 header {
   width:100%;
   height: 51px;
+
   background-color: #1f2937;
   text-align: center;
 }
 
+table {
+  height: 400px;
+  width: 400px;
+  background-color: #1f2937;
+
+  table-layout:fixed; 
+
+  margin: 0 auto;
+  margin-top: 2%;
+}
+
+tr {
+  height: 133px;
+}
+
+td {
+  height: 100%;
+
+  background-color: whitesmoke;
+
+  text-align: center;
+  vertical-align: middle;
+
+  cursor: pointer;
+}
+
+select {
+  cursor: pointer;
+}
+
 .mainbody1 {
   background-color: lightgray;
+  display: table;
+
   width: 100%;
   height: calc(100vh - 51px);
 }
 
-.gameText {
-  width: 318px;
-  height: 100px;
-  margin: 0 auto;
-}
+.gameStatus {
+  width: 50%;
+  height: 10%;
 
-.gameBoard {
-  width: 318px;
-
-  display: grid;
-  grid-template-columns: repeat(3, auto);
-  justify-content: start;
-  
-  margin: 0 auto;
-}
-
-.box {
-  height:100px;
-  width: 100px;
   background-color: white;
-  border: 3px solid #1f2937;
-  text-align: center;
 
-  cursor: pointer;
+  border-radius: 5px;
+
+  margin: 0 auto;
+  margin-top: 2%;
+
+  display: table;
+}
+
+.gameDifficulty {
+  width: 50%;
+
+  background-color: white;
+
+  border-radius: 5px;
+
+  margin: 0 auto;
+  margin-top: 2%;
+
+  display: table;
+
+  text-align: center;
+  vertical-align: middle;
+
+  padding-top: 2%;
+  padding-bottom: 2%;
 }
